--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#303f9f</color>
+    <color name="colorPrimaryDark">#3f51b5</color>
+    <color name="colorAccent">#ff5252</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="cyan_500">#00bcd4</color>
 </resources>
