--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#ff5252</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="cyan_500">#00bcd4</color>
+    <color name="arrow">#9e9e9e</color>
+    <color name="hint">#BDBDBD</color>
+    <color name="error">#f44336</color>
+    <color name="highlight">#ffcdd2</color>
 </resources>
