Graph the eq1 and eq2

--- a/app/src/main/res/layout/content_graph.xml
+++ b/app/src/main/res/layout/content_graph.xml
@@ -15,5 +15,9 @@
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:id="@+id/graph" />
+        android:id="@+id/graph"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
