--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,187 +12,224 @@
     tools:context=".Activites.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_activite_title"
-        android:id="@+id/main_activity_txt_helper"
-        android:textSize="15sp"
-        android:fontFamily="monospace"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/img_main_logo"
-        android:src="@drawable/eqcolor"
-        android:layout_below="@+id/main_activity_txt_helper"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/First_operation_activity_main"
-        android:textSize="18sp"
-        android:fontFamily="serif-monospace"
-        android:id="@+id/first_operation_main_activite"
-        android:layout_below="@+id/img_main_logo"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <com.rengwuxian.materialedittext.MaterialEditText
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/main_activite_operation"
-        android:id="@+id/main_activity_input_operation_first"
-        android:layout_below="@+id/first_operation_main_activite"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_alignRight="@+id/first_operation_main_activite"
-        android:layout_alignEnd="@+id/first_operation_main_activite" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Rule_title"
-        android:id="@+id/txt_rule"
-        android:fontFamily="serif-monospace"
-        android:textSize="15sp"
-        android:layout_below="@+id/main_activity_input_operation_first"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_toStartOf="@+id/main_activity_txt_helper"
-        android:layout_below="@+id/txt_rule"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/second_operation_main_activite"
-        android:layout_alignEnd="@+id/second_operation_main_activite" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/main_activite_title"
+                android:id="@+id/main_activity_txt_helper"
+                android:textSize="15sp"
+                android:fontFamily="monospace"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/First_Rule_hint"
-        android:id="@+id/main_activity_first_rule"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/Second_operation_1_input_main"
-        android:layout_alignStart="@+id/Second_operation_1_input_main" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/img_main_logo"
+                android:src="@drawable/eqcolor"
+                android:layout_below="@+id/main_activity_txt_helper"
+                android:layout_centerHorizontal="true" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/main_activite_operation"
-        android:id="@+id/Second_operation_input_main"
-        android:layout_below="@+id/second_operation_main_activite"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="27dp"
-        android:layout_alignRight="@+id/main_activity_input_operation_first"
-        android:layout_alignEnd="@+id/main_activity_input_operation_first" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/First_operation_activity_main"
+                android:textSize="18sp"
+                android:fontFamily="serif-monospace"
+                android:id="@+id/first_operation_main_activite"
+                android:layout_below="@+id/img_main_logo"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/main_activite_1_operation"
-        android:id="@+id/Second_operation_1_input_main"
-        android:layout_alignTop="@+id/Second_operation_input_main"
-        android:layout_toRightOf="@+id/second_operation_main_activite"
-        android:layout_toEndOf="@+id/second_operation_main_activite" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/main_activite_operation"
+                android:id="@+id/main_activity_input_operation_first"
+                android:layout_below="@+id/first_operation_main_activite"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/main_activite_1_operation"
-        android:id="@+id/Second_operation_1eq_input_main"
-        android:layout_above="@+id/txt_rule"
-        android:layout_alignRight="@+id/main_activity_first_rule"
-        android:layout_alignEnd="@+id/main_activity_first_rule"
-        android:layout_toRightOf="@+id/second_operation_main_activite"
-        android:layout_toEndOf="@+id/second_operation_main_activite" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Rule_title"
+                android:id="@+id/txt_rule"
+                android:fontFamily="serif-monospace"
+                android:textSize="15sp"
+                android:layout_alignBottom="@+id/main_activity_input_operation_first"
+                android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Rule_title"
-        android:id="@+id/txt_second_rule"
-        android:fontFamily="serif-monospace"
-        android:textSize="15sp"
-        android:layout_below="@+id/Second_operation_input_main"
-        android:layout_above="@+id/textSecondRule"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                android:layout_below="@+id/txt_rule"
+                android:layout_alignRight="@+id/first_operation_main_activite"
+                android:layout_alignEnd="@+id/first_operation_main_activite" />
 
-    <Spinner
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textSecondRule"
-        android:layout_alignBottom="@+id/main_activity_second_rule"
-        android:layout_alignRight="@+id/second_operation_main_activite"
-        android:layout_alignEnd="@+id/second_operation_main_activite" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/First_Rule_hint"
+                android:id="@+id/main_activity_first_rule"
+                android:layout_below="@+id/txt_rule"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toRightOf="@+id/second_operation_main_activite"
+                android:layout_toEndOf="@+id/second_operation_main_activite" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textCursorDrawable="@drawable/text_cursor_cyan"
-        android:textSize="14sp"
-        app:met_floatingLabel="highlight"
-        app:met_maxCharacters="20"
-        app:met_primaryColor="?colorAccent"
-        app:met_singleLineEllipsis="true"
-        android:hint="@string/First_Rule_hint"
-        android:id="@+id/main_activity_second_rule"
-        android:layout_below="@+id/Second_operation_1_input_main"
-        android:layout_alignLeft="@+id/Second_operation_1_input_main"
-        android:layout_alignStart="@+id/Second_operation_1_input_main" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/main_activite_operation"
+                android:id="@+id/Second_operation_input_main"
+                android:layout_below="@+id/second_operation_main_activite"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Second_operation_activity_main"
-        android:textSize="18sp"
-        android:fontFamily="serif-monospace"
-        android:id="@+id/second_operation_main_activite"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="26dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Rule_title"
+                android:id="@+id/txt_second_rule"
+                android:fontFamily="serif-monospace"
+                android:textSize="15sp"
+                android:layout_below="@+id/Second_operation_input_main"
+                android:layout_above="@+id/textSecondRule"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Spinner
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textSecondRule"
+                android:layout_alignTop="@+id/main_activity_second_rule"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/txt_rule"
+                android:layout_toStartOf="@+id/txt_rule" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/First_Rule_hint"
+                android:id="@+id/main_activity_second_rule"
+                android:layout_toRightOf="@+id/textView"
+                android:layout_toEndOf="@+id/textView"
+                android:layout_below="@+id/Second_operation_input_main" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Second_operation_activity_main"
+                android:textSize="18sp"
+                android:fontFamily="serif-monospace"
+                android:id="@+id/second_operation_main_activite"
+                android:layout_below="@+id/textView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/third_equation"
+                android:textSize="18sp"
+                android:fontFamily="serif-monospace"
+                android:id="@+id/txtThirdEcuation"
+                android:layout_below="@+id/main_activity_second_rule"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/main_activite_operation"
+                android:id="@+id/third_eqn"
+                android:layout_below="@+id/txtThirdEcuation"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Spinner
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textThirdRule"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="34dp"
+                android:layout_alignRight="@+id/textSecondRule"
+                android:layout_alignEnd="@+id/textSecondRule" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Rule_title"
+                android:id="@+id/txt_thirt_rule_rule"
+                android:fontFamily="serif-monospace"
+                android:textSize="15sp"
+                android:layout_below="@+id/Second_operation_input_main"
+                android:layout_above="@+id/textSecondRule"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textCursorDrawable="@drawable/text_cursor_cyan"
+                android:textSize="14sp"
+                app:met_floatingLabel="highlight"
+                app:met_maxCharacters="20"
+                app:met_primaryColor="?colorAccent"
+                app:met_singleLineEllipsis="true"
+                android:hint="@string/third_Rule_hint"
+                android:id="@+id/third_eqn_rule"
+                android:layout_alignTop="@+id/textThirdRule"
+                android:layout_alignRight="@+id/third_eqn"
+                android:layout_alignEnd="@+id/third_eqn"
+                android:layout_alignLeft="@+id/main_activity_second_rule"
+                android:layout_alignStart="@+id/main_activity_second_rule" />
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
 
 
