--- a/app/src/main/res/layout/activity_graph2.xml
+++ b/app/src/main/res/layout/activity_graph2.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,13 +11,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="tv.tvquetzachapin.graphfunctions.Activites.Graph2Activity">
 
-
     <com.androidplot.xy.XYPlot
         style="@style/APDefacto.Dark"
         android:id="@+id/plot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        ap:title="A Simple XY Plot"
+        ap:title="Graphics parts"
         ap:rangeTitle="range"
         ap:domainTitle="domain"
         ap:lineLabels="left|bottom|top|right"
