New colors, calculate limit

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,7 +49,7 @@
                 app:met_maxCharacters="20"
                 app:met_primaryColor="?colorAccent"
                 app:met_singleLineEllipsis="true"
-                android:hint="@string/main_activite_operation"
+                android:hint="@string/equation_1"
                 android:id="@+id/main_activity_input_operation_first"
                 android:layout_below="@+id/img_main_logo"
                 android:layout_alignParentLeft="true"
@@ -98,7 +98,7 @@
                 app:met_maxCharacters="20"
                 app:met_primaryColor="?colorAccent"
                 app:met_singleLineEllipsis="true"
-                android:hint="@string/main_activite_operation"
+                android:hint="@string/equation_2"
                 android:id="@+id/Second_operation_input_main"
                 android:layout_below="@+id/textView"
                 android:layout_alignParentLeft="true"
@@ -143,7 +143,7 @@
                 app:met_maxCharacters="20"
                 app:met_primaryColor="?colorAccent"
                 app:met_singleLineEllipsis="true"
-                android:hint="@string/main_activite_operation"
+                android:hint="@string/equation_3"
                 android:id="@+id/third_eqn"
                 android:layout_below="@+id/textSecondRule"
                 android:layout_alignParentLeft="true"
