--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -13,60 +13,113 @@
     tools:context="tv.tvquetzachapin.graphfunctions.Activites.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:text="@string/card_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:id="@+id/textView2" />
+        <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="63dp">
+            <TextView
+                android:text="@string/card_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="13dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:id="@+id/textView2" />
 
-            <ImageView
-                android:layout_width="176dp"
-                android:layout_height="110dp"
-                app:srcCompat="@drawable/eqcolor"
-                android:id="@+id/imageView2" />
-
-            <RelativeLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="63dp"
+                android:id="@+id/card1"
+                style="@style/MyCardViewStyle">
 
-                <TextView
-                    android:text="@string/card_title_card_eqn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView3"
-                    android:layout_marginRight="24dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                <ImageView
+                    android:layout_width="176dp"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/eqcolor"
+                    android:id="@+id/imageView2" />
 
-                <TextView
-                    android:text="El método de integración por partes permite calcular la integral de un producto de dos funciones"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView6"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignLeft="@+id/textView3"
-                    android:layout_alignStart="@+id/textView3"
-                    android:layout_marginTop="37dp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:text="@string/card_title_card_eqn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
+
+                    <TextView
+                        android:text="El método de integración por partes permite calcular la integral de un producto de dos funciones"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView6"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignLeft="@+id/textView3"
+                        android:layout_alignStart="@+id/textView3"
+                        android:layout_marginTop="37dp" />
+
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/card1"
+                android:layout_marginTop="20sp"
+                style="@style/MyCardViewStyle">
+
+                <ImageView
+                    android:layout_width="176dp"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/trigonometry"
+                    android:id="@+id/imageView3" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="La trigonometría es el estudio de las razones trigonométricas: seno, coseno; tangente, cotangente; secante y cosecante."
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView8"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="37dp"
+                        android:layout_alignLeft="@+id/textView7"
+                        android:layout_alignStart="@+id/textView7" />
+
+                    <TextView
+                        android:text="@string/card_title_card_tri"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView7"
+                        android:layout_marginRight="60dp"
+                        android:layout_marginEnd="60dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
     </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
