--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_eqn"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/math"
             android:title="Graph a Function" />
         <item
             android:id="@+id/nav_pitagoras"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/trg"
             android:title="Pitagoras" />
     </group>
 </menu>
