--- a/app/src/main/res/layout/activity_trigonometric.xml
+++ b/app/src/main/res/layout/activity_trigonometric.xml
@@ -13,7 +13,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
             android:paddingTop="10sp"
@@ -79,11 +79,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="163dp" >
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            android:layout_marginTop="163dp"
+            android:id="@+id/crd">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -93,7 +90,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="103dp">
 
                 <TextView
                     android:text="@string/card_title_card_tri_triang_cat"
@@ -117,6 +114,54 @@
                     android:id="@+id/btnCat"
                     android:layout_alignLeft="@+id/textView9"
                     android:layout_alignStart="@+id/textView9"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/crd">
+
+            <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/tdd"
+            android:id="@+id/imageView8"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:text="@string/card_title_card_tri_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="41dp"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/btn"
+                    android:id="@+id/btnTrig"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignLeft="@+id/textView12"
+                    android:layout_alignStart="@+id/textView12" />
+
+                <TextView
+                    android:text="@string/card_title_card_trig"
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView12"
+                    android:layout_marginRight="41dp"
+                    android:layout_marginEnd="41dp"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
             </RelativeLayout>
